almost forst cont test